fix minor course planner alignments; table header, body and footer

--- a/flaskcalculator/static/stylesheets/dropdown.css
+++ b/flaskcalculator/static/stylesheets/dropdown.css
@@ -95,7 +95,7 @@ select:-moz-focusring {
 position: relative;
 background:#27348b;
 color: white;
-padding: 5px 10px;
+padding: 4px 9px;
 border-radius: 100%;
 font-size: 14px;
 cursor: help;
